--- a/index.html
+++ b/index.html
@@ -1147,8 +1147,6 @@ Error message and password prompt
 
 <li>שרלה הייתה אוהבת את זה</li>
 
-<li>שרלה לא הייתה אוהבת את זה</li>
-
 <li>תבשיל ירקות</li>
 
 <li>תבשיל שורשים ואורז בשלושה צבעים</li>
@@ -9017,10 +9015,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20181020142343275" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20181023114707432" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20161023184705203" modified="20181021144507238" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181023114855250" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9029,7 +9027,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="עמליה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9049,7 +9047,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181020121030904" title="$:/temp/search">
+<div created="20161023184814872" modified="20181023115108850" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11403,7 +11401,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
-<div created="20170428171750882" modified="20180704183440833" tags="HH [[שרלה לא הייתה אוהבת את זה]] בתים" title="דיור מוגז">
+<div created="20170428171750882" modified="20181023114908733" tags="HH בתים" title="דיור מוגז">
 <pre>[img[pictures/diyur-mugaz.jpg]]
 
 !!![[גורה]]:
@@ -11546,7 +11544,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
-<div created="20170320161241857" modified="20170729110111786" tags="HH [[שרלה לא הייתה אוהבת את זה]]" title="האחיות K">
+<div created="20170320161241857" modified="20181023114920639" tags="HH" title="האחיות K">
 <pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
 
 !!![[גורה]]:
@@ -11566,7 +11564,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;list-links filter:&quot;[tag[האחיות בלות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161111215423587" modified="20171119080327057" tags="[[קופים ממונעים]]" title="האחיות כהן">
+<div created="20161111215423587" modified="20181023114644931" tags="[[קופים ממונעים]]" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -11579,7 +11577,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 כדברי פתיחה, אני מעתיק לכאן את הקטע בו אווה מתארת אותי עומד שם ונואם בפני חברי ב[[כוכב המשאלות בעל תשע הצלעות]]:
 
-לפני די הרבה שנים, 13-14 שנים, הייתה לי כזו... תקופה. הייתי סטלן אימים, וללא קשר, תמיד אהבתי [[להמציא|חלומות שחלמנו]]. אחד מהדברים שהמצאתי אז הוא, שאני אישה הונגריה בסיסית, ששמה [[אווה כהן]], ובעצם מבחינתי הייתי אחותם של האחים [[איתן ויואל כהן|איתן וג'ואל כהן]], למרות שבכלל יואל הוא שם [[אבי|אבא יואל]] ובכלל אין לי אחים כי אם ארבע אחיות, ממש כמו ל[[דוקטור דרק שפרד|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. הרעיון נשאר אתי והמשיך להתפתח, ועם הזמן החלטתי, שאני רוצה להקים קבוצת יצירה ליוצרים בלתי תלויים זה בזה אך קשורים זה לזה ושמה ''האחיות כהן''.  אני שיתפתי בזה את [[גורה]] אחותי הקטנה והיפה. גורה ואני [[ישבנו|האסיפה הראשונה]] ימים ולילות רבים, ופתחנו את האג'נדה והדמויות, את הקונספט והדרמה. כתבנו [[תשתית לסדרה|HH]] בת שמונה פרקים על האחיות עם אפשרות להמשך.. ולמה אני מספר לכם את זה? כי כשהגעתי לדירה כבר הבנתי שזהו מתקן השיגור של האחיות, ולכן בניתי את [[המעבדה]] בחדר השינה שלי. ועכשיו לדבר עצמו. אני מזמין כל אחד ואחת מכם להצטרף לחבורה. תנאי בסיסי לכניסת מיזם לתחומי האחיות הוא, ש-[[שרלה הייתה אוהבת את זה]]. מי זו שרלה? שרלה היא אישה שנפטרה מסרטן במח, כמו ש[[מאיר אריאל]] מספר בסרט [[מסע הבחירות של מאיר אריאל|https://www.youtube.com/watch?v=yFXUEoXCkT8]],  (5:30 דקות מתחילת הסרט), על האישה שנלקחה צעירה, והיה לה ראש מאד מעניין, והלוואי והיא הייתה המורה לספרות שלו. הוא מספר על צחוקיה המשגעים והחכמים ביותר, ועל הצורך שחש לכתוב לה משהו של פרידה ביום השלושים לפטירתה, משהו כמו שיר אהבה למורתו שאף היה מבקש ממנה ציון עליו. ומי מחליט אם שרלה שהלכה לעולמה הייתה [[אוהבת|אהבה]] את זה או לא? הדבר התמים שאני שואף אליו הוא שלעולם לא אצטרך לנהוג [[כפוליטיקאי|פוליטיקאי]] או מי מחברי האחיות, כי אני בטוח [[שאת זה שרלה לא הייתה אוהבת|שרלה לא הייתה אוהבת את זה]]. 
+לפני די הרבה שנים, 13-14 שנים, הייתה לי כזו... תקופה. הייתי סטלן אימים, וללא קשר, תמיד אהבתי [[להמציא|חלומות שחלמנו]]. אחד מהדברים שהמצאתי אז הוא, שאני אישה הונגריה בסיסית, ששמה [[אווה כהן]], ובעצם מבחינתי הייתי אחותם של האחים [[איתן ויואל כהן|איתן וג'ואל כהן]], למרות שבכלל יואל הוא שם [[אבי|אבא יואל]] ובכלל אין לי אחים כי אם ארבע אחיות, ממש כמו ל[[דוקטור דרק שפרד|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. הרעיון נשאר אתי והמשיך להתפתח, ועם הזמן החלטתי, שאני רוצה להקים קבוצת יצירה ליוצרים בלתי תלויים זה בזה אך קשורים זה לזה ושמה ''האחיות כהן''.  אני שיתפתי בזה את [[גורה]] אחותי הקטנה והיפה. גורה ואני [[ישבנו|האסיפה הראשונה]] ימים ולילות רבים, ופתחנו את האג'נדה והדמויות, את הקונספט והדרמה. כתבנו [[תשתית לסדרה|HH]] בת שמונה פרקים על האחיות עם אפשרות להמשך.. ולמה אני מספר לכם את זה? כי כשהגעתי לדירה כבר הבנתי שזהו מתקן השיגור של האחיות, ולכן בניתי את [[המעבדה]] בחדר השינה שלי. ועכשיו לדבר עצמו. אני מזמין כל אחד ואחת מכם להצטרף לחבורה. תנאי בסיסי לכניסת מיזם לתחומי האחיות הוא, ש-[[שרלה הייתה אוהבת את זה]]. מי זו שרלה? שרלה היא אישה שנפטרה מסרטן במח, כמו ש[[מאיר אריאל]] מספר בסרט [[מסע הבחירות של מאיר אריאל|https://www.youtube.com/watch?v=yFXUEoXCkT8]],  (5:30 דקות מתחילת הסרט), על האישה שנלקחה צעירה, והיה לה ראש מאד מעניין, והלוואי והיא הייתה המורה לספרות שלו. הוא מספר על צחוקיה המשגעים והחכמים ביותר, ועל הצורך שחש לכתוב לה משהו של פרידה ביום השלושים לפטירתה, משהו כמו שיר אהבה למורתו שאף היה מבקש ממנה ציון עליו. ומי מחליט אם שרלה שהלכה לעולמה הייתה [[אוהבת|אהבה]] את זה או לא? הדבר התמים שאני שואף אליו הוא שלעולם לא אצטרך לנהוג [[כפוליטיקאי|פוליטיקאי]] או מי מחברי האחיות, כי אני בטוח שאת זה שרלה לא הייתה אוהבת.
 
 או כמו שגורה ואני כתבנו בשעתו, כשגרתי [[בין האלונים|המעבדה]].
 
@@ -12541,7 +12539,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 באופן יזום ומכוון לא [[איזכרנו|אחות כהן]] את קיומם של [[המכשירים המחופשים לטלפון|https://he.wikipedia.org/wiki/%D7%98%D7%9C%D7%A4%D7%95%D7%9F_%D7%97%D7%9B%D7%9D]] כאן בגנזך עד עכשיו, למרות שלכולנו יש איזה אחד. אני יושב ומחכה רגוע למטרו הבוקר, עד שהחכם ממליץ לי על סידרת תמונות  מבדיוק לפני שנה. הוא חושב שהן יתאימו לי לאלבום ולי הולך הראש. זו הייתה סדרת תמונות שחשבתי שמחקתי - ובאמת מחקתי רק לא מהבפנים. בתמונות רואים את נטלי, [[שהלכה ממני|https://www.youtube.com/watch?v=1dXEzMcfCyA]] לפני שלושה חודשים, ואותי, מאוהבים. </pre>
 </div>
-<div created="20170514194133105" modified="20180316181438223" tags="[[בחוות החיות]] [[שרלה לא הייתה אוהבת את זה]]" title="יד ימין אינה יודעת">
+<div created="20170514194133105" modified="20181023114934847" tags="[[בחוות החיות]]" title="יד ימין אינה יודעת">
 <pre>[img[pictures/yad-yamin.jpg]]
 
 
@@ -12637,7 +12635,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[ילדים חד הוריים]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161030110441328" modified="20170729110151099" tags="HH [[שרלה לא הייתה אוהבת את זה]]" title="ים טתיס">
+<div created="20161030110441328" modified="20181023115000502" tags="HH" title="ים טתיס">
 <pre>[img[pictures/tethys-sea.jpg]]
 מאגר גז שכל התפוקה העתידית שלו נמכרה לגורם שמעדיף להישאר בעילום שם תמורת הזכות לפתח את [[מרינה זוטו]] ו[[געזונטהייטס]] בתור נכסי [[דיור מוגז]].</pre>
 </div>
@@ -13268,7 +13266,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[כוכב המשאלות בעל תשע הצלעות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170425180523126" modified="20170729110207863" tags="[[בחוות החיות]] [[שרלה לא הייתה אוהבת את זה]]" title="כורתים עצים">
+<div created="20170425180523126" modified="20181023115014420" tags="[[בחוות החיות]]" title="כורתים עצים">
 <pre>[img[pictures/kortim-ezim.jpg]]
 
 !!![[גורה]]:
@@ -14559,7 +14557,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בזמן האחרון התחילו להגיש [[בקוסקוס|הקוסקוס]], [[פודינג אורז]], שסוניה מכינה.</pre>
 </div>
-<div created="20170425213116567" modified="20170729110224167" tags="[[בחוות החיות]] [[שרלה לא הייתה אוהבת את זה]]" title="סוסים לדבק">
+<div created="20170425213116567" modified="20181023115036949" tags="[[בחוות החיות]]" title="סוסים לדבק">
 <pre>[img[pictures/soosim-ledevek.jpg]]
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, כשהסוסים הופכים חסרי תועלת, החזירים והכלבים שולחים אותם  לבית החרושת לדבק.''
@@ -15328,7 +15326,7 @@ May the lord bless your soul, I love you girl</pre>
 
 </pre>
 </div>
-<div created="20170728194609841" modified="20170729110319966" tags="[[שרלה לא הייתה אוהבת את זה]]" title="עמליה">
+<div created="20170728194609841" modified="20181023115133876" tags="[[מטא בדיון]]" title="עמליה">
 <pre>[img[pictures/amalya.jpg]]
 
 !!![[גורה]]:
@@ -17111,13 +17109,6 @@ Fapina''
 שד מתרוצץ.
 הרוח בעץ.
 </pre>
-</div>
-<div created="20170728194233655" modified="20170729112806897" tags="[[בחוות החיות]]" title="שרלה לא הייתה אוהבת את זה">
-<pre>[img[pictures/sarale-lo.jpg]]
-
-!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, [[אדם צועק את שחסר לו|https://www.youtube.com/watch?v=DGNRX_o0AGA]]
-
-&lt;&lt;list-links filter:&quot;[tag[שרלה לא הייתה אוהבת את זה]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20180315105819806" modified="20180605132646732" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] [[חיות אוכל]] הצוות מתכונים" title="תבשיל ירקות">
 <pre>[img[pictures/tavshil-yerakot.jpg]]
