--- a/index.html
+++ b/index.html
@@ -387,6 +387,8 @@ Error message and password prompt
 
 <li>בבית של פיני</li>
 
+<li>בדרך לשרונה</li>
+
 <li>בחוות החיות</li>
 
 <li>ביג לבובסקי</li>
@@ -777,6 +779,8 @@ Error message and password prompt
 
 <li>להתרועע עם האחות ב. כהן</li>
 
+<li>לוטוס ספרים</li>
+
 <li>לוקוס בתנור</li>
 
 <li>לורין היל</li>
@@ -891,6 +895,8 @@ Error message and password prompt
 
 <li>מערכת העיתון</li>
 
+<li>מערכת תל אביב</li>
+
 <li>מפעיל יד</li>
 
 <li>מצפה ראשית</li>
@@ -934,6 +940,8 @@ Error message and password prompt
 <li>נסענו לאזכרה של אימא</li>
 
 <li>נשמה</li>
+
+<li>נתב</li>
 
 <li>סבתא שלנו</li>
 
@@ -9015,10 +9023,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20181023114707432" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Tags</pre>
+<div created="20161023184709475" modified="20181030161624018" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181023114855250" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181030172825840" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9027,7 +9035,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="עמליה [[האחיות כהן]]" title="$:/StoryList">
+<div list="נתב [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9047,7 +9055,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181023115108850" title="$:/temp/search">
+<div created="20161023184814872" modified="20181026154632044" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10335,6 +10343,13 @@ well,
 שלכם 
 
 דןדן</pre>
+</div>
+<div created="20181026164230759" modified="20181030192044216" tags="[[כאן בגטו]] [[מטא בדיון]]" title="בדרך לשרונה">
+<pre>[img[pictures/baderech-lesarona.jpg]]
+
+!!![[תומר]]:
+
+בשבוע שעבר הלכתי להיפגש עם חבר [[בשרונה|http://www.saronatlv.co.il/]], ובמעבר [[מרחוב הארבעה|https://he.wikipedia.org/wiki/%D7%A8%D7%97%D7%95%D7%91_%D7%94%D7%90%D7%A8%D7%91%D7%A2%D7%94]] זה מה שראיתי (הבניינים באמצע הם [[המערכת ז&quot;ל|מערכת תל אביב]]).</pre>
 </div>
 <div created="20170425194155286" modified="20180316181504318" tags="[[קופים ממונעים]] הצוות" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
@@ -11899,7 +11914,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20180704183725925" tags="בתים [[נאמני הגנזך]]" title="המעבדה">
+<div created="20161113192814802" modified="20181030160742262" tags="בתים [[נאמני הגנזך]] [[מטא בדיון]]" title="המעבדה">
 <pre>[img[pictures/hamaabada.jpg]]
 
 ''כאן היינו''
@@ -13478,6 +13493,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 יש גם [[אפליקציות לסלולרים|https://github.com/tootsuite/documentation/blob/master/Using-Mastodon/Apps.md#list-of-apps]].</pre>
 </div>
+<div created="20181030190426548" modified="20181030193049171" tags="[[כאן בגטו]] [[מטא בדיון]]" title="לוטוס ספרים">
+<pre>[img[pictures/lotus.jpg]]
+
+!!![[תומר]]:
+
+באלנבי 101 נמצאת [[לוטוס פנינת הספרים|https://book-store-1586.business.site/]]. חנות של משפחה שאוהבת לקרוא, עדינה וצנועה ומיטב הספרים במחירים שווים.</pre>
+</div>
 <div created="20170402165550173" modified="20180605133148089" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="לוקוס בתנור">
 <pre>[img[pictures/dag-matconim.jpg]]
 
@@ -14187,6 +14209,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בקצה החלל הפתוח יש חדר אוכל צבעוני, גם בו נוהגים העובדים לשבת ולעבוד.</pre>
 </div>
+<div created="20181026164355462" modified="20181030193412114" tags="[[כאן בגטו]] [[מטא בדיון]]" title="מערכת תל אביב">
+<pre>[img[pictures/maarechet-tel-aviv.jpg]]
+
+!!![[תומר]]:
+
+כשהייתי סטודנט, עבדתי כמאבטח בחצר המערכת. חצר נפלאה שנראית כמו קיבוץ ישן מלא עצים ובתים נמוכים חלקם לשימור, וממוקמת סמוך [[לשרונה|בדרך לשרונה]]. לפעמים כשהיה צורך עליתי לעבוד ברוממה, ודי מהר היכרתי, (כמו כל המאבטחים), את עובדי הרשות מקטן ועד גדול. מפה לשם מי שהיה אחראי על עובדי האולפן הציע לי לעבוד כ cg, שזה אותו אחד שכותב את הכותרות והכיתובים והקרדיטים שנראים על המסך. בהמשך הציעו לי להיות [[נתב]], וכך העברתי תשע שנים מחיי בעבודת אולפן לא רעה בכלל - עד שסגרו עלינו את המסך באיבחה באמצע מאי 2017, היה לא מכבד. את הצילום ממנו ציירה גורה צילמתי בשנה שעברה מאחורי הגדר בדרכי לחתום בלשכת התעסוקה.</pre>
+</div>
 <div created="20170422190532804" modified="20170429202701490" tags="[[חלומות שחלמנו]]" title="מפעיל יד">
 <pre>[img[pictures/mafil-yad.jpg]]
 
@@ -14480,6 +14509,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[נשמה]]&quot;&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20181025181017484" modified="20181030193753141" tags="[[כאן בגטו]] [[סיפורים אמיתיים]]" title="נתב">
+<pre>[img[pictures/natav.jpg]]
+
+!!![[תומר]]:
+
+עד לפני שנה וחצי כמעט זה מה שהייתי - נתב תמונה [[בטלוויזיה|מערכת תל אביב]]. כלומר זה שלפי הוראות הבמאי מעלה את תמונת המצלמה המבוקשת, הכותרות, בחלונות, קטעי הוידאו... אני אוהב את הישיבה המרוכזת והשקטה בשידור חי אצל הקונסולה מול המסכים בקונטרול הגועש והקר כזיכרון מתוק.
 
 </pre>
 </div>
