--- a/index.html
+++ b/index.html
@@ -493,6 +493,8 @@ Error message and password prompt
 
 <li>דינה ז&quot;ל</li>
 
+<li>דליקטסן</li>
+
 <li>דליקטסן אצל ז'נבייב</li>
 
 <li>דם אמיתי</li>
@@ -9035,7 +9037,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="נתב [[האחיות כהן]]" title="$:/StoryList">
+<div list="דליקטסן [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9055,7 +9057,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181026154632044" title="$:/temp/search">
+<div created="20161023184814872" modified="20181031154234418" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9863,13 +9865,13 @@ well,
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20181020104051284" modified="20181020143855493" tags="סדרות אימהות" title="אחוזת דאונטון">
+<div created="20181020104051284" modified="20181031122226418" tags="סדרות אימהות" title="אחוזת דאונטון">
 <pre>[img[pictures/downton-abbey.jpg]]
 
 !!![[גורה]]:
 
 כל בית צריך אימא אוהבת, מקבלת ומסייעת, [[ובאחוזת דאונטון|https://www.imdb.com/title/tt1606375/?ref_=nv_sr_1]] הענקית שתי אימהות נהדרות. קורה, [[האימא המלאכית|https://www.imdb.com/name/nm0001527/?ref_=tt_cl_t9]] של מעלה, ורוז, [[האימא הכי בעולם|https://www.imdb.com/name/nm0517642/?ref_=ttfc_fc_cl_i8]] של מטה. הן שתיהן דואגות לסדר את הדברים שקורים בשום וטוב לב, כי דמויות רבות מתגוררות באחוזה ועוד רבות מגיעות לבקרה.
-מהתצלום [[הזה|http://d2buyft38glmwk.cloudfront.net/media/__sized/images/canonical/downton-abbey-s6-house-trivia-1920x1080-scale-800x600.jpg]] ציירתי את האחוזה, והדמות הצועדת בה היא [[הרוזנת האלמנה ויולט קרולי|https://www.imdb.com/name/nm0001749/?ref_=tt_cl_t12]], אחת הדמויות האדירות, למרות שהיא יצאה קצת יותר כמו [[איזבל קרולי|https://www.imdb.com/name/nm0934362/?ref_=ttfc_fc_cl_t13]], דמות נפלאה גם כן. אבל מה עם [[דייזי|https://www.imdb.com/name/nm2904789/?ref_=ttfc_fc_cl_t10]] ההולכת ופורחת, [[מיסטר מוזלי|https://www.imdb.com/name/nm0236413/?ref_=ttfc_fc_cl_t14]] הנפלא, [[גברת פטמור|https://www.imdb.com/name/nm0630149/?ref_=ttfc_fc_cl_t11]] הבובה, [[ברנסון|https://www.imdb.com/name/nm1395602/?ref_=ttfc_fc_cl_t15]] המענטש, [[ליידי מרי|https://www.imdb.com/name/nm1890784/?ref_=ttfc_fc_cl_t5]] הקרה והרגישה בדרכה, [[ליידי אדית'|https://www.imdb.com/name/nm3882295/?ref_=ttfc_fc_cl_t2]] מלאת האהבה והכעסים, [[האבא|https://www.imdb.com/name/nm0095017/?ref_=tt_cl_t1]] של מעלה השמרן המתגמש, [[האבא|https://www.imdb.com/name/nm0141697/?ref_=ttfc_fc_cl_t3]] של מטה שאט מתרכך מעט, [[בייט'ס|https://www.imdb.com/name/nm0185354/?ref_=ttfc_fc_cl_t4]] הגבר, [[אנה|https://www.imdb.com/name/nm0296219/?ref_=ttfc_fc_cl_t6]] האישה, [[תומאס|https://www.imdb.com/name/nm1674947/?ref_=tt_cl_t7]] והזעם ??? קשה לי להפסיק כי שימת הלב לדקויות הנפש האנושית והתפתחותה היא סוף כל הסופים שמשוחק מוש. מחיאות כפיים סוערות.</pre>
+מהתצלום [[הזה|http://d2buyft38glmwk.cloudfront.net/media/__sized/images/canonical/downton-abbey-s6-house-trivia-1920x1080-scale-800x600.jpg]] ציירתי את האחוזה, והדמות הצועדת בה היא [[הרוזנת האלמנה ויולט קרולי|https://www.imdb.com/name/nm0001749/?ref_=tt_cl_t12]], אחת הדמויות האדירות, למרות שהיא יצאה קצת יותר כמו [[איזבל קרולי|https://www.imdb.com/name/nm0934362/?ref_=ttfc_fc_cl_t13]], דמות נפלאה גם כן. אבל מה עם [[דייזי|https://www.imdb.com/name/nm2904789/?ref_=ttfc_fc_cl_t10]] ההולכת ופורחת, [[מיסטר מוזלי|https://www.imdb.com/name/nm0236413/?ref_=ttfc_fc_cl_t14]] הנפלא, [[גברת פטמור|https://www.imdb.com/name/nm0630149/?ref_=ttfc_fc_cl_t11]] הבובה, [[ברנסון|https://www.imdb.com/name/nm1395602/?ref_=ttfc_fc_cl_t15]] המענטש, [[ליידי מרי|https://www.imdb.com/name/nm1890784/?ref_=ttfc_fc_cl_t5]] שיכולה להיות כלבתא אך גם חברה טובה, [[ליידי אדית'|https://www.imdb.com/name/nm3882295/?ref_=ttfc_fc_cl_t2]] מלאת האהבה והכעסים, [[האבא|https://www.imdb.com/name/nm0095017/?ref_=tt_cl_t1]] של מעלה השמרן המתגמש, [[האבא|https://www.imdb.com/name/nm0141697/?ref_=ttfc_fc_cl_t3]] של מטה שאט מתרכך מעט, [[בייט'ס|https://www.imdb.com/name/nm0185354/?ref_=ttfc_fc_cl_t4]] הגבר, [[אנה|https://www.imdb.com/name/nm0296219/?ref_=ttfc_fc_cl_t6]] האישה, [[תומאס|https://www.imdb.com/name/nm1674947/?ref_=tt_cl_t7]] והזעם ??? קשה לי להפסיק כי שימת הלב לדקויות הנפש האנושית והתפתחותה היא סוף כל הסופים שמשוחק מוש. מחיאות כפיים סוערות.</pre>
 </div>
 <div created="20170423214419764" modified="20180814110815597" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]] חבר" title="אחות כהן">
 <pre>[img[pictures/achot-coen.jpg]]
@@ -11439,6 +11441,14 @@ different tastes, but there were things we both love: family, work, people in al
 כשזה קורה משתנה לי הקול ושפת הדיבור שלי משתנה. אני צועקת ומדברת לא יפה.
 
 אני אומנם מטופלת מכל הכוונים, אבל רק לאחרונה, אחרי [[שדןדן נסע|דןדן נסע]], יויו צילם אותי בוידאו משתוללת על [[אלפרד]], וזה נראה פויה. ממש מביך.</pre>
+</div>
+<div created="20181031153935874" modified="20181031180351470" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות" title="דליקטסן">
+<pre>[img[pictures/delicatessen-tel-aviv.jpg]]
+
+
+!!![[תומר]]:
+
+יויו לעולם לא היה יורד לרמה הזאת של לראות תוכניות בערוץ מסחרי, אבל שידבר איתי כשיהפוך לאבא עייף שמתבטט מול המסך הקטן באזור תשע עשר מידי ערב, וכעת הוא צופה ב- MKR, והתוודע כמו כל צופי האפיק [[לרותי ברודו|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%AA%D7%99_%D7%95%D7%9E%D7%AA%D7%99_%D7%91%D7%A8%D7%95%D7%93%D7%95]] - השופטת הכריזמטית והכנה - שאוחזת בכמה מעוזי קולינריה איתנים - וכן - גם אני לפעמים וגם הבוקר פניתי שמאלה ליהודה הלוי ועצרתי  [[בדליקטסן|https://www.delitlv.co.il/]],  וקניתי קפה ומאפה ולחם לטוסטים והמשכתי לצעוד מבסוט לאלנבי.</pre>
 </div>
 <div created="20171018115658510" modified="20181018173428468" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות" title="דליקטסן אצל ז'נבייב">
 <pre>[img[pictures/delicatessen.jpg]]
