התדר ורומנו, הורמונים

--- a/index.html
+++ b/index.html
@@ -549,6 +549,8 @@ Error message and password prompt
 
 <li>הורים במשרה מלאה</li>
 
+<li>הורמונים</li>
+
 <li>החיים זה לא דיבורים</li>
 
 <li>החיים נועדו למי שלא יכול להתמודד עם סמים</li>
@@ -606,6 +608,8 @@ Error message and password prompt
 <li>הרוקי מורקמי</li>
 
 <li>הרקוויאם של פורה</li>
+
+<li>התדר בואך רומנו</li>
 
 <li>וויקליף ז'אן</li>
 
@@ -9028,7 +9032,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20181030161624018" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181030172825840" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181101163536972" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9037,7 +9041,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="דליקטסן [[האחיות כהן]]" title="$:/StoryList">
+<div list="הורמונים [[התדר בואך רומנו]] jazz [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9057,7 +9061,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181031154234418" title="$:/temp/search">
+<div created="20161023184814872" modified="20181101150111463" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11442,13 +11446,13 @@ different tastes, but there were things we both love: family, work, people in al
 
 אני אומנם מטופלת מכל הכוונים, אבל רק לאחרונה, אחרי [[שדןדן נסע|דןדן נסע]], יויו צילם אותי בוידאו משתוללת על [[אלפרד]], וזה נראה פויה. ממש מביך.</pre>
 </div>
-<div created="20181031153935874" modified="20181031180351470" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות" title="דליקטסן">
+<div created="20181031153935874" modified="20181031180929826" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות" title="דליקטסן">
 <pre>[img[pictures/delicatessen-tel-aviv.jpg]]
 
 
 !!![[תומר]]:
 
-יויו לעולם לא היה יורד לרמה הזאת של לראות תוכניות בערוץ מסחרי, אבל שידבר איתי כשיהפוך לאבא עייף שמתבטט מול המסך הקטן באזור תשע עשר מידי ערב, וכעת הוא צופה ב- MKR, והתוודע כמו כל צופי האפיק [[לרותי ברודו|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%AA%D7%99_%D7%95%D7%9E%D7%AA%D7%99_%D7%91%D7%A8%D7%95%D7%93%D7%95]] - השופטת הכריזמטית והכנה - שאוחזת בכמה מעוזי קולינריה איתנים - וכן - גם אני לפעמים וגם הבוקר פניתי שמאלה ליהודה הלוי ועצרתי  [[בדליקטסן|https://www.delitlv.co.il/]],  וקניתי קפה ומאפה ולחם לטוסטים והמשכתי לצעוד מבסוט לאלנבי.</pre>
+[[יויו]] לעולם לא היה יורד לרמה הזאת של לראות תוכניות בערוץ מסחרי, אבל שידבר איתי כשיהפוך לאבא עייף שמתבטט מול המסך הקטן באזור תשע עשר מידי ערב, וכעת הוא צופה ב- MKR, והתוודע כמו כל צופי האפיק [[לרותי ברודו|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%AA%D7%99_%D7%95%D7%9E%D7%AA%D7%99_%D7%91%D7%A8%D7%95%D7%93%D7%95]] - השופטת הכריזמטית והכנה - שאוחזת בכמה מעוזי קולינריה איתנים - וכן - גם אני לפעמים וגם הבוקר פניתי שמאלה ליהודה הלוי ועצרתי  [[בדליקטסן|https://www.delitlv.co.il/]],  וקניתי קפה ומאפה ולחם לטוסטים והמשכתי לצעוד מבסוט לאלנבי.</pre>
 </div>
 <div created="20171018115658510" modified="20181018173428468" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות" title="דליקטסן אצל ז'נבייב">
 <pre>[img[pictures/delicatessen.jpg]]
@@ -11762,6 +11766,13 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 אחרי הסופרנוס הייתי מעונגת מהסידרה, אך מפורקת ומלאת [[מחשבות|אימא מהאגדות]] שלא פסקו. גם בהורים במשרה מלאה המחשבות לא פוסקות, ומראות את יופין וכוחן של האהבה, הקבלה, הנתינה וההתמסרות, לשיפור רצינות החיים הקיימת ממילא, ושאין לי מה להתלונן כי מצאתי את [[משפחתי|המשק האוטרקי שלנו]].
 </pre>
+</div>
+<div created="20181031180601433" modified="20181101172743539" tags="[[האחיות בלות]] [[סיפורים אמיתיים]] [[כשהם ישנים]]" title="הורמונים">
+<pre>[img[pictures/hormonim.jpg]]
+
+!!![[אווה]]:
+
+כן, כשאנחנו ילדות אנחנו נכנסות [[בפייד אין|https://he.wikipedia.org/wiki/%D7%94%D7%AA%D7%91%D7%92%D7%A8%D7%95%D7%AA_%D7%9E%D7%99%D7%A0%D7%99%D7%AA]] שאורך כמה שנים, למעגל ההורמונלי עד הבשלות ללדת. [[הורמונים|https://he.wikipedia.org/wiki/%D7%94%D7%95%D7%A8%D7%9E%D7%95%D7%9F]] ששמם הכללי הוא [[אסטרוגן|https://he.wikipedia.org/wiki/%D7%90%D7%A1%D7%98%D7%A8%D7%95%D7%92%D7%9F]] משתתפים בפעילויות שונות של הגוף ומוציאים אותנו מדעתינו בלי שידענו. אחר כך לאורך 30 שנה בערך, אם צריך או לא, [[אנחנו ממשיכות|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%97%D7%96%D7%95%D7%A8_%D7%94%D7%97%D7%95%D7%93%D7%A9%D7%99]] לבייץ, להיות לפני מחזור של גלי כאב, עייפות, מצבי רוח, חוסר סבלנות ועוד, עד שמתחיל [[הפייד אאוט|https://he.wikipedia.org/wiki/%D7%92%D7%99%D7%9C_%D7%94%D7%9E%D7%A2%D7%91%D7%A8_%D7%90%D7%A6%D7%9C_%D7%A0%D7%A9%D7%99%D7%9D]], ששיאו בהפסקת המחזור, גלי חום, מצבי רוח, הזקנה הקופצת, העור המתקמט, כאבים ועוד אבל יש תמורה - אין יותר מחזור חודשי ויש תקווה שכל המהומה הזו תיפסק, ונחזור להיות כמו שהיינו כשהיינו בנות שמונה.</pre>
 </div>
 <div created="20170514201348734" modified="20170514233042321" tags="[[סיפורים אמיתיים]]" title="החיים זה לא דיבורים">
 <pre>[img[pictures/hachaim-ze-lo.jpg]]
@@ -12206,6 +12217,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 אני מאזינה לביצוע של Choir and Symphony Orchestra of the Ryszard Bukowski Music School in Wrocław, Poland. אני מעדיפה את [[הביצוע הזה|https://www.youtube.com/watch?v=wEgAWjXIxFA]]  גם כשאיני מתבוננת בפניהם היפים והקשובים של חברי התזמורת והמקהלה, ובנברשות התלויות מעל לראשיהם. עוד לא הצלחתי להבין אם תלויות שם שש או שאולי שבע נברשות, שהיו יכולות להתאים לסט של [[חתונת רפאים|http://www.imdb.com/title/tt0121164/]]. הן מוצאות חן בעיני. הן שונות זו מזו בגודל ובצורה אך הן מאותה המשפחה. 
 
 גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של [[פורה המיוסר|גבריאל פורה]]. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
+</div>
+<div created="20181101155948399" modified="20181101175342699" tags="[[כאן בגטו]] [[חיות אוכל]] מוזיקה [[מטא בדיון]]" title="התדר בואך רומנו">
+<pre>[img[pictures/teder-romano.jpg]]
+
+!!![[תומר]]:
+
+התדר ורומנו נמצאים [[בבית רומנו|https://he.wikipedia.org/wiki/%D7%91%D7%99%D7%AA_%D7%A8%D7%95%D7%9E%D7%A0%D7%95_(%D7%AA%D7%9C_%D7%90%D7%91%D7%99%D7%91)]] שבדרך יפו- תל אביב, וגם לשם היגעתי בכמה הזדמנויות בעיקר כדי לראות את [[jazz]]. [[לתדר|https://teder.fm/]], רדיו שבחסותו נערכים מופעים בחצר הבניין השווה ביותר, צמודה פיצה שווה של [[רומנו|https://www.tripadvisor.co.il/Restaurant_Review-g293984-d8545357-Reviews-Romano-Tel_Aviv_Tel_Aviv_District.html]]. שקומה השנייה הוא מסעדה - מהמקומות של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]] וכנופייתו, שמסעדותיו  טובות הווייב וטעם עושות כאן כיף. פעילויות רבות שיתוף, מסתבר, קורות שם גם עם הסוזי ועוד. תענוג שמח כל הסיפור הזה.</pre>
 </div>
 <div created="20170602111237129" modified="20180208153926539" tags="[[אחיות חוץ]] מוזיקה" title="וויקליף ז'אן">
 <pre>[img[pictures/wyclef-jean.jpg]]
