--- a/index.html
+++ b/index.html
@@ -9041,7 +9041,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="הורמונים [[התדר בואך רומנו]] jazz [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[התדר בואך רומנו]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12218,12 +12218,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של [[פורה המיוסר|גבריאל פורה]]. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
 </div>
-<div created="20181101155948399" modified="20181101175342699" tags="[[כאן בגטו]] [[חיות אוכל]] מוזיקה [[מטא בדיון]]" title="התדר בואך רומנו">
+<div created="20181101155948399" modified="20181101180005561" tags="[[כאן בגטו]] [[חיות אוכל]] מוזיקה [[מטא בדיון]]" title="התדר בואך רומנו">
 <pre>[img[pictures/teder-romano.jpg]]
 
 !!![[תומר]]:
 
-התדר ורומנו נמצאים [[בבית רומנו|https://he.wikipedia.org/wiki/%D7%91%D7%99%D7%AA_%D7%A8%D7%95%D7%9E%D7%A0%D7%95_(%D7%AA%D7%9C_%D7%90%D7%91%D7%99%D7%91)]] שבדרך יפו- תל אביב, וגם לשם היגעתי בכמה הזדמנויות בעיקר כדי לראות את [[jazz]]. [[לתדר|https://teder.fm/]], רדיו שבחסותו נערכים מופעים בחצר הבניין השווה ביותר, צמודה פיצה שווה של [[רומנו|https://www.tripadvisor.co.il/Restaurant_Review-g293984-d8545357-Reviews-Romano-Tel_Aviv_Tel_Aviv_District.html]]. שקומה השנייה הוא מסעדה - מהמקומות של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]] וכנופייתו, שמסעדותיו  טובות הווייב וטעם עושות כאן כיף. פעילויות רבות שיתוף, מסתבר, קורות שם גם עם הסוזי ועוד. תענוג שמח כל הסיפור הזה.</pre>
+התדר ורומנו נמצאים [[בבית רומנו|https://he.wikipedia.org/wiki/%D7%91%D7%99%D7%AA_%D7%A8%D7%95%D7%9E%D7%A0%D7%95_(%D7%AA%D7%9C_%D7%90%D7%91%D7%99%D7%91)]] שבדרך יפו- תל אביב, וגם לשם היגעתי בכמה הזדמנויות בעיקר כדי לראות את [[jazz]]. [[לתדר|https://teder.fm/]], רדיו שבחסותו נערכים מופעים בחצר הבניין השווה ביותר, צמודה פיצה שווה של [[רומנו|https://www.tripadvisor.co.il/Restaurant_Review-g293984-d8545357-Reviews-Romano-Tel_Aviv_Tel_Aviv_District.html]]. שבקומה השנייה הוא מסעדה - מהמקומות של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]] וכנופייתו, שמסעדותיו  טובות הווייב וטעם עושות כאן כיף. פעילויות רבות שיתוף, מסתבר, קורות שם גם עם הסוזי ועוד. תענוג שמח כל הסיפור הזה.</pre>
 </div>
 <div created="20170602111237129" modified="20180208153926539" tags="[[אחיות חוץ]] מוזיקה" title="וויקליף ז'אן">
 <pre>[img[pictures/wyclef-jean.jpg]]
