--- a/index.html
+++ b/index.html
@@ -915,6 +915,8 @@ Error message and password prompt
 
 <li>מרק</li>
 
+<li>מרק טחון</li>
+
 <li>מרק כתום בסיר גדול</li>
 
 <li>מרק עם קניידלך</li>
@@ -9041,7 +9043,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[התדר בואך רומנו]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מרק טחון]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -14294,6 +14296,29 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[גורה]]:
 
 מרק הוא גבר שבגברים, הוא בעלה ההונגרי של [[סוניה]] ההונגריה, והוא מתכנת מחשבים, שפדה את חובו ועשה אקזיט כדבעי.</pre>
+</div>
+<div created="20181101191733525" modified="20181101203139424" tags="[[אירי טוענת]] [[חיות אוכל]] מתכונים [[מתכונים טבעוניים]]" title="מרק טחון">
+<pre>[img[pictures/marak-tachoon.jpg]]
+
+!!![[אירי]]:
+
+הגעתי למסקנה, שבמרק טחון, צריך להשאיר חתיכה אחת מהירקות שלמה, כמו שמשאירים לבנה חשופה בקיר לזכר חורבן הבית.
+
+כך עשיתי במקרה הזה:
+
+1. לפי חצי מגודל הסיר שוטפים וחותכים: 
+
+גזר, זוקיני, עלי סלרי, אפונה יבשה, כרישה
+
+2. מכסים במים ומבשלים עד שהכל רך
+
+3. מכבים את האש ונותנים לירקות להתקרר
+
+4. טוחנים עם מקל טחינה או בלנדר (לא לשכוח להשאיר חתיכת ירק שלמה)
+
+5. מוסיפים עוד מעט מים, מחזירים את הסיר לכיריים ומבשלים עד רתיחה. מנמיכים את הלהבה
+
+6. מתבלים על פי הטעם במלח ים גס, פלפל שחור גרוס, חצי כפית שמן חריף, 2-3 טיפות של חומץ בלסמי סמיך, ממשיכים לבשל עוד 10-20 דקות, ואם צריך מתקנים את התיבול.</pre>
 </div>
 <div created="20170402151609777" modified="20180605133302441" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="מרק כתום בסיר גדול">
 <pre>[img[pictures/marak-katom.jpg]]
