--- a/index.html
+++ b/index.html
@@ -1099,6 +1099,8 @@ Error message and password prompt
 
 <li>קנלוני</li>
 
+<li>קפה וממתקים</li>
+
 <li>קפה מילר</li>
 
 <li>קפיץ ספירלי</li>
@@ -9036,7 +9038,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20181030161624018" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181101163536972" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181102171658048" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9045,7 +9047,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[קפה וממתקים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9065,7 +9067,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181101150111463" title="$:/temp/search">
+<div created="20161023184814872" modified="20181102171641667" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -16393,6 +16395,15 @@ Fapina''
 
 
 
+
+</pre>
+</div>
+<div created="20181102155349776" modified="20181102200943116" tags="[[כאן בגטו]] [[חיות אוכל]]" title="קפה וממתקים">
+<pre>[img[pictures/cafe-vemamtakim.jpg]]
+
+!!![[תומר]]:
+
+עכשיו כבר נובמבר, [[וויקליף|וויקליף ז'אן]] אמור לחזור. עדיין חם, אבל פחות ולא מזיעים. התינוקת מתרגלת למטפלת, כך שיצאתי לסיבוב קניות דרך יהודה הלוי, שמאלה באלנבי עד 107, שם [[בקפה וממתקים|https://hamordim.wordpress.com/tag/%D7%A7%D7%A4%D7%94/]] נמצא אדון מסביר פנים, מוקף בשוקולד וטוחן קפה. קניתי בונבוני שוקולד במילוי דובדבני אמרנה על המשקל והמשכתי במסע.
 
 </pre>
 </div>
