--- a/index.html
+++ b/index.html
@@ -16398,12 +16398,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20181102155349776" modified="20181102200943116" tags="[[כאן בגטו]] [[חיות אוכל]]" title="קפה וממתקים">
+<div created="20181102155349776" modified="20181102201349314" tags="[[כאן בגטו]] [[חיות אוכל]]" title="קפה וממתקים">
 <pre>[img[pictures/cafe-vemamtakim.jpg]]
 
 !!![[תומר]]:
 
-עכשיו כבר נובמבר, [[וויקליף|וויקליף ז'אן]] אמור לחזור. עדיין חם, אבל פחות ולא מזיעים. התינוקת מתרגלת למטפלת, כך שיצאתי לסיבוב קניות דרך יהודה הלוי, שמאלה באלנבי עד 107, שם [[בקפה וממתקים|https://hamordim.wordpress.com/tag/%D7%A7%D7%A4%D7%94/]] נמצא אדון מסביר פנים, מוקף בשוקולד וטוחן קפה. קניתי בונבוני שוקולד במילוי דובדבני אמרנה על המשקל והמשכתי במסע.
+עכשיו כבר נובמבר, [[וויקליף|וויקליף ז'אן]] אמור לחזור. עדיין חם, אבל פחות ולא מזיעים. התינוקת מתרגלת למטפלת, כך שיצאתי לסיבוב קניות דרך יהודה הלוי, ימינה באלנבי עד 107, שם [[בקפה וממתקים|https://hamordim.wordpress.com/tag/%D7%A7%D7%A4%D7%94/]] נמצא אדון מסביר פנים, מוקף בשוקולד וטוחן קפה. קניתי בונבוני שוקולד במילוי דובדבני אמרנה על המשקל והמשכתי במסע.
 
 </pre>
 </div>
