--- a/index.html
+++ b/index.html
@@ -9047,7 +9047,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קפה וממתקים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[רשות השידור]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16700,12 +16700,12 @@ Fapina''
 
 [[רן יגיל|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]]</pre>
 </div>
-<div created="20181102131642926" modified="20181102134827893" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] פעם" title="רשות השידור">
+<div created="20181102131642926" modified="20181102201703130" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] פעם" title="רשות השידור">
 <pre>[img[pictures/iba.jpg]]
 
 !!![[תומר]]:
 
-קרה כך שהייתי נוכח וחוזיתי בקריסתה של [[הרשות|https://he.wikipedia.org/wiki/%D7%A8%D7%A9%D7%95%D7%AA_%D7%94%D7%A9%D7%99%D7%93%D7%95%D7%A8]], כחלק מהתמונה כולה.
+קרה כך שהייתי נוכח וחזיתי בקריסתה של [[הרשות|https://he.wikipedia.org/wiki/%D7%A8%D7%A9%D7%95%D7%AA_%D7%94%D7%A9%D7%99%D7%93%D7%95%D7%A8]], כחלק מהתמונה כולה.
 
 
 
