--- a/index.html
+++ b/index.html
@@ -483,6 +483,8 @@ Error message and password prompt
 
 <li>דבקה</li>
 
+<li>דה וינצ'י 2</li>
+
 <li>דיוויד בואי</li>
 
 <li>דיוויד ביירן</li>
@@ -9047,7 +9049,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[רשות השידור]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דה וינצ'י 2]] [[מערכת תל אביב]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11379,6 +11381,13 @@ Is where I want to be
 
 </pre>
 </div>
+<div created="20181103162256301" modified="20181103163621133" tags="[[כאן בגטו]] [[רשות השידור]] [[מטא בדיון]]" title="דה וינצ'י 2">
+<pre>[img[pictures/da-vinci-2.jpg]]
+
+!!![[תומר]]:
+
+זה לא כל כך נעים לראות רדיו סגור, אבל מה לעשות, שכשאתה מתגורר כאן בגטו זו לפעמים הדרך הרצויה או המעניינת. ובכל מקרה זה הצד הדה וינצ'י של [[מערכת תל אביב]].</pre>
+</div>
 <div created="20170105154405192" modified="20180720110331942" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
 
@@ -11452,13 +11461,13 @@ different tastes, but there were things we both love: family, work, people in al
 
 אני אומנם מטופלת מכל הכוונים, אבל רק לאחרונה, אחרי [[שדןדן נסע|דןדן נסע]], יויו צילם אותי בוידאו משתוללת על [[אלפרד]], וזה נראה פויה. ממש מביך.</pre>
 </div>
-<div created="20181031153935874" modified="20181031180929826" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות" title="דליקטסן">
+<div created="20181031153935874" modified="20181102203036830" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות" title="דליקטסן">
 <pre>[img[pictures/delicatessen-tel-aviv.jpg]]
 
 
 !!![[תומר]]:
 
-[[יויו]] לעולם לא היה יורד לרמה הזאת של לראות תוכניות בערוץ מסחרי, אבל שידבר איתי כשיהפוך לאבא עייף שמתבטט מול המסך הקטן באזור תשע עשר מידי ערב, וכעת הוא צופה ב- MKR, והתוודע כמו כל צופי האפיק [[לרותי ברודו|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%AA%D7%99_%D7%95%D7%9E%D7%AA%D7%99_%D7%91%D7%A8%D7%95%D7%93%D7%95]] - השופטת הכריזמטית והכנה - שאוחזת בכמה מעוזי קולינריה איתנים - וכן - גם אני לפעמים וגם הבוקר פניתי שמאלה ליהודה הלוי ועצרתי  [[בדליקטסן|https://www.delitlv.co.il/]],  וקניתי קפה ומאפה ולחם לטוסטים והמשכתי לצעוד מבסוט לאלנבי.</pre>
+[[יויו]] לעולם לא היה יורד לרמה הזאת של לראות תוכניות בערוץ מסחרי, אבל שידבר איתי כשיהפוך לאבא עייף שמתבטט מול המסך הקטן באזור תשע עשר מידי ערב, וכעת הוא צופה ב- MKR, והתוודע כמו כל צופי האפיק [[לרותי ברודו|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%AA%D7%99_%D7%95%D7%9E%D7%AA%D7%99_%D7%91%D7%A8%D7%95%D7%93%D7%95]] - השופטת הכריזמטית והכנה - שאוחזת בכמה מעוזי קולינריה איתנים - וכן - גם אני לפעמים וגם הבוקר פניתי שמאלה ליהודה הלוי ועצרתי  [[בדליקטסן|https://www.delitlv.co.il/]],  וקניתי קפה ומאפה ולחם לטוסטים והמשכתי לצעוד מבסוט [[לאלנבי|קפה וממתקים]].</pre>
 </div>
 <div created="20171018115658510" modified="20181018173428468" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות" title="דליקטסן אצל ז'נבייב">
 <pre>[img[pictures/delicatessen.jpg]]
