--- a/index.html
+++ b/index.html
@@ -9049,7 +9049,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דה וינצ'י 2]] [[מערכת תל אביב]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="נתב דליקטסן [[דה וינצ'י 2]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11381,12 +11381,12 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20181103162256301" modified="20181103163621133" tags="[[כאן בגטו]] [[רשות השידור]] [[מטא בדיון]]" title="דה וינצ'י 2">
+<div created="20181103162256301" modified="20181103211523848" tags="[[כאן בגטו]] [[רשות השידור]] [[מטא בדיון]]" title="דה וינצ'י 2">
 <pre>[img[pictures/da-vinci-2.jpg]]
 
 !!![[תומר]]:
 
-זה לא כל כך נעים לראות רדיו סגור, אבל מה לעשות, שכשאתה מתגורר כאן בגטו זו לפעמים הדרך הרצויה או המעניינת. ובכל מקרה זה הצד הדה וינצ'י של [[מערכת תל אביב]].</pre>
+זה לא כל כך נעים לראות רדיו סגור, אבל כשאתה מתגורר כאן בגטו  לפעמים דה וינצ'י 2 זה בדרך.</pre>
 </div>
 <div created="20170105154405192" modified="20180720110331942" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
