--- a/index.html
+++ b/index.html
@@ -1131,8 +1131,6 @@ Error message and password prompt
 
 <li>רן יגיל</li>
 
-<li>רשות השידור</li>
-
 <li>שאלון האחיות</li>
 
 <li>שָה נוּאָר</li>
@@ -9049,7 +9047,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="נתב דליקטסן [[דה וינצ'י 2]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מערכת תל אביב]] נתב [[בדרך לשרונה]] [[דה וינצ'י 2]] [[מאנטה ריי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9069,7 +9067,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181102171641667" title="$:/temp/search">
+<div created="20161023184814872" modified="20181105082504980" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10358,7 +10356,7 @@ well,
 
 דןדן</pre>
 </div>
-<div created="20181026164230759" modified="20181102133159996" tags="[[כאן בגטו]] [[מטא בדיון]] [[רשות השידור]]" title="בדרך לשרונה">
+<div created="20181026164230759" modified="20181105205855376" tags="[[כאן בגטו]] [[מטא בדיון]]" title="בדרך לשרונה">
 <pre>[img[pictures/baderech-lesarona.jpg]]
 
 !!![[תומר]]:
@@ -11381,7 +11379,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20181103162256301" modified="20181103211523848" tags="[[כאן בגטו]] [[רשות השידור]] [[מטא בדיון]]" title="דה וינצ'י 2">
+<div created="20181103162256301" modified="20181105205842898" tags="[[כאן בגטו]] [[מטא בדיון]]" title="דה וינצ'י 2">
 <pre>[img[pictures/da-vinci-2.jpg]]
 
 !!![[תומר]]:
@@ -14252,7 +14250,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בקצה החלל הפתוח יש חדר אוכל צבעוני, גם בו נוהגים העובדים לשבת ולעבוד.</pre>
 </div>
-<div created="20181026164355462" modified="20181102133138700" tags="[[כאן בגטו]] [[מטא בדיון]] [[רשות השידור]]" title="מערכת תל אביב">
+<div created="20181026164355462" modified="20181105205915706" tags="[[כאן בגטו]] [[מטא בדיון]]" title="מערכת תל אביב">
 <pre>[img[pictures/maarechet-tel-aviv.jpg]]
 
 !!![[תומר]]:
@@ -14578,7 +14576,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181025181017484" modified="20181102133119383" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[רשות השידור]]" title="נתב">
+<div created="20181025181017484" modified="20181105205905741" tags="[[כאן בגטו]] [[סיפורים אמיתיים]]" title="נתב">
 <pre>[img[pictures/natav.jpg]]
 
 !!![[תומר]]:
@@ -16708,17 +16706,6 @@ Fapina''
 
 
 [[רן יגיל|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]]</pre>
-</div>
-<div created="20181102131642926" modified="20181102201703130" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] פעם" title="רשות השידור">
-<pre>[img[pictures/iba.jpg]]
-
-!!![[תומר]]:
-
-קרה כך שהייתי נוכח וחזיתי בקריסתה של [[הרשות|https://he.wikipedia.org/wiki/%D7%A8%D7%A9%D7%95%D7%AA_%D7%94%D7%A9%D7%99%D7%93%D7%95%D7%A8]], כחלק מהתמונה כולה.
-
-
-
-&lt;&lt;list-links filter:&quot;[tag[רשות השידור]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20161213210419446" modified="20170608155740191" tags="[[אחות כהן]]" title="שאלון האחיות">
 <pre>[img[pictures/sheelon-haachayot.jpg]]
