גילי, נוטבטק ושינויים

--- a/index.html
+++ b/index.html
@@ -605,6 +605,8 @@ Error message and password prompt
 
 <li>הקוסקוס</li>
 
+<li>הקיוסק של גילי</li>
+
 <li>הקליניקה</li>
 
 <li>הרוקי מורקמי</li>
@@ -942,6 +944,8 @@ Error message and password prompt
 <li>נאמני הגנזך</li>
 
 <li>נדיה</li>
+
+<li>נוטבוק</li>
 
 <li>נולדנו</li>
 
@@ -9047,7 +9051,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מערכת תל אביב]] נתב [[בדרך לשרונה]] [[דה וינצ'י 2]] [[מאנטה ריי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="נוטבוק [[הקיוסק של גילי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12193,6 +12197,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20181107090226210" modified="20181107093930730" tags="[[כאן בגטו]] [[חיות אוכל]]" title="הקיוסק של גילי">
+<pre>[img[pictures/gili.jpg]]
+
+!!![[תומר]]:
+
+את גילי הנפלא אני מכיר עוד מהתקופה שהיה סניף של [[רביבה וסיליה|https://www.revivaandcelia.co.il/]] ברחוב הארבעה, ליד [[מערכת תל אביב]]. כמה שמחתי כשגיליתי שהוא פתח את [[הקיוסק שלו|https://www.facebook.com/%D7%92%D7%99%D7%9C%D7%99-%D7%A7%D7%99%D7%95%D7%A1%D7%A7-%D7%91%D7%A8%D7%95%D7%98%D7%A9%D7%99%D7%9C%D7%93-Gilis-kiosk-1264150057010863/?ref=page_internal]] ברוטשילד 31 פינת אלנבי, שם יכינו לך קפה טעים עם מאפים טעימים של רביבה וסיליה וחיוך של טוב. אני לוקח מקיאטו כפול וממשיך [[לנוטבוק|נוטבוק]].</pre>
+</div>
 <div created="20161112230916972" modified="20180704183856663" tags="בתים" title="הקליניקה">
 <pre>[img[pictures/haklinika.jpg]]
 
@@ -14512,6 +14523,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[יויו]]:
 
 האחות הבכורה והביולוגית של גורה ושלי.</pre>
+</div>
+<div created="20181106171400656" modified="20181107093302775" tags="[[כאן בגטו]] [[מטא בדיון]]" title="נוטבוק">
+<pre>[img[pictures/notbook.jpg]]
+
+!!![[תומר]]:
+
+אומנים הם לאו דווקא אלה המציגים במוזיאונים, חלקם פזורים במרחב הפתוח, ועובדים ברצינות ובשקט, כמו למשל הבחור שאני מחבב, בסדנה והחנות [[במונטיפיורי 25|https://www.notbook-studio.com/]], שם יש עולם של ניירות עם הדפסים - מדבקות, מחברות, פנקסים, קופסאות, קישוטים, תמונות ועוד דברים יפים יפים שאני אוהב לראות ולקנות.
+</pre>
 </div>
 <div created="20180202172446720" modified="20181020120930837" tags="[[אחות כהן]] הצוות אימהות" title="נולדנו">
 <pre>[img[pictures/noladnu.jpg]]
