--- a/index.html
+++ b/index.html
@@ -331,6 +331,8 @@ Error message and password prompt
 
 <li>אימא מהאגדות</li>
 
+<li>אימא של ג'אז</li>
+
 <li>אימא שלי</li>
 
 <li>אימא, סבתא ואני</li>
@@ -9053,7 +9055,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מערכת תל אביב]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="רוממה [[אימא של ג'אז]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9970,6 +9972,13 @@ well,
 
 
 </pre>
+</div>
+<div created="20181107123350423" modified="20181107153652341" tags="[[כאן בגטו]] [[מטא בדיון]]" title="אימא של ג'אז">
+<pre>[img[pictures/ima-shel-jazz.jpg]]
+
+!!![[תומר]]:
+
+מצחיק אבל רק לא מזמן גיליתי שאימא של [[ג'אז|jazz]] עבדה איתי [[בטלוויזיה|מערכת תל אביב]].</pre>
 </div>
 <div created="20170505164125282" modified="20181020120556384" tags="[[סיפורים אמיתיים]] אימהות" title="אימא שלי">
 <pre>[img[pictures/ima-sheli-iri.jpg]]
@@ -16583,13 +16592,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20181107110533011" modified="20181107110800211" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] פעם" title="רוממה">
-<pre>
-[img[pictures/romema.jpg]]
+<div created="20181107110533011" modified="20181107171504496" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] פעם" title="רוממה">
+<pre>[img[pictures/romema.jpg]]
 
 !!![[תומר]]:
 
-הבניין החוטים ומה שבינהם</pre>
+הבניין, החוטים ומה שבינהם</pre>
 </div>
 <div created="20180617165026649" modified="20180619121542245" tags="[[חיות אוכל]] מתכונים [[סיפורים אמיתיים]]" title="רוסטביף">
 <pre>[img[pictures/roast-beef.jpg]]
