--- a/index.html
+++ b/index.html
@@ -9055,7 +9055,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="רוממה [[אימא של ג'אז]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[פלא אוזן]] [[דה וינצ'י 2]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9075,7 +9075,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181107111006890" title="$:/temp/search">
+<div created="20161023184814872" modified="20181108124320788" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11394,12 +11394,12 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20181103162256301" modified="20181105205842898" tags="[[כאן בגטו]] [[מטא בדיון]]" title="דה וינצ'י 2">
+<div created="20181103162256301" modified="20181108124204280" tags="[[כאן בגטו]] [[מטא בדיון]]" title="דה וינצ'י 2">
 <pre>[img[pictures/da-vinci-2.jpg]]
 
 !!![[תומר]]:
 
-זה לא כל כך נעים לראות רדיו סגור, אבל כשאתה מתגורר כאן בגטו  לפעמים דה וינצ'י 2 זה בדרך.</pre>
+זה לא כל כך נעים לראות רדיו סגור, אבל כשאתה מתגורר כאן בגטו  לפעמים דה וינצ'י 2 זה בדרך, ואני רגשן [[מתגעגע|https://www.youtube.com/watch?v=SPg4IwGZMvM]].</pre>
 </div>
 <div created="20170105154405192" modified="20180720110331942" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
@@ -16025,15 +16025,17 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20180408155155270" modified="20180408180604856" tags="[[אחיות חוץ]] מוזיקה" title="פלא אוזן">
+<div created="20180408155155270" modified="20181108124533339" tags="[[אחיות חוץ]] מוזיקה" title="פלא אוזן">
 <pre>[img[pictures/pele-ozen.jpg]]
 
 !!![[הצוות]]:
 
 [[נפלאים|http://coensisters.org/pictures/pele-ozen-beit-alpha.jpg]] ששרים על הסקייט והמייק חזק וברור. [[שלא נרדם כולנו|https://www.youtube.com/watch?v=HxdcYPaNIX0]] בשמירה על האחרים ועל [[עצמנו|על הספקטרום]]. [[בביט וכיף של גרוב|https://www.youtube.com/watch?v=9OlAf4fCv0Q]] לטייל איתם וללמוד שאפשר [[שיהיה לנו כבר טוב|https://www.youtube.com/watch?v=WPwFRyCuWpI]]. אנחנו [[כאן בדירה|הצוות]] התאהבנו בהם. 
 
+זה [[מהאלבום החדש|https://www.youtube.com/watch?v=khMjy6gJIog99]]- נובמבר 2018.
 
 [[כי את האור להפיץ זה לא פשע|https://www.youtube.com/watch?v=Z2mJLm8aUiI]]
+
 
 </pre>
 </div>
